--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,111 @@
 {
   "name": "CreditWise AI",
-  "short_name": "CreditWiseAI",
+  "short_name": "CreditWise",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "display_override": [
+    "window-controls-overlay"
+  ],
+  "background_color": "#f5f7fa",
   "theme_color": "#4361ee",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
+    },
+    {
+      "src": "icons/icon-maskable-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icons/icon-maskable-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "categories": [
+    "finance",
+    "utilities",
+    "business"
+  ],
+  "dir": "ltr",
+  "lang": "en-US",
+  "scope": "/",
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "scope_extensions": [
+    {
+      "origin": "*.mkcreditwise.com"
+    }
+  ],
+  "edge_side_panel": {
+    "preferred_width": 480
+  },
+  "file_handlers": [
+    {
+      "action": "/verify",
+      "accept": {
+        "application/pdf": [
+          ".pdf"
+        ]
+      },
+      "icons": [
+        {
+          "src": "icons/icon-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ],
+      "launch_type": "single-client"
+    }
+  ],
+  "handle_links": "auto",
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
+  "protocol_handlers": [
+    {
+      "protocol": "web+creditwise",
+      "url": "/credit?type=%s"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Credit Analysis",
+      "short_name": "Credit",
+      "description": "Analyze a CIBIL credit report",
+      "url": "/credit",
+      "icons": [
+        {
+          "src": "icons/icon-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
+    },
+    {
+      "name": "Verify PDF",
+      "short_name": "Verify",
+      "description": "Run a forensic analysis on a PDF",
+      "url": "/verify",
+      "icons": [
+        {
+          "src": "icons/icon-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
     }
   ],
   "share_target": {
@@ -29,26 +117,10 @@
       "url": "url"
     }
   },
-  "shortcuts": [
-    {
-      "name": "Credit Analysis",
-      "short_name": "Credit",
-      "description": "Analyze a CIBIL credit report",
-      "url": "/credit",
-      "icons": [{ "src": "/icons/icon-192x192.png", "sizes": "192x192" }]
-    },
-    {
-      "name": "Verify PDF",
-      "short_name": "Verify",
-      "description": "Run forensic analysis on a PDF",
-      "url": "/verify",
-      "icons": [{ "src": "/icons/icon-192x192.png", "sizes": "192x192" }]
-    }
-  ],
   "widgets": [
     {
       "name": "CreditWise AI Shortcuts",
-      "description": "Quick actions for CreditWise AI",
+      "description": "Quick links to CreditWise AI features",
       "tag": "shortcuts",
       "template": "shortcuts",
       "ms_ac_template": "shortcuts",
@@ -59,70 +131,17 @@
             "url": "/credit"
           },
           {
-            "name": "Verify Document",
+            "name": "Forensically Verify PDF",
             "url": "/verify"
           }
         ]
       },
       "icons": [
-        { "src": "/icons/icon-192x192.png", "sizes": "192x192" }
+        {
+          "src": "icons/icon-192x192.png",
+          "sizes": "192x192"
+        }
       ]
     }
-  ],
-  "display_override": [
-    "standalone",
-    "window-controls-overlay"
-  ],
-  "file_handlers": [
-    {
-      "action": "/credit",
-      "accept": {
-        "application/pdf": [".pdf"]
-      }
-    }
-  ],
-  "handle_links": "auto",
-  "protocol_handlers": [
-    {
-      "protocol": "web+creditwiseai",
-      "url": "/credit?launch_from_protocol=%s"
-    }
-  ],
-  "edge_side_panel": {
-    "preferred_width": 480
-  },
-  "id": "/",
-  "launch_handler": {
-    "client_mode": "navigate-existing"
-  },
-  "orientation": "portrait",
-  "screenshots": [
-    {
-      "src": "https://placehold.co/1080x2340.png",
-      "sizes": "1080x2340",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Credit Analysis Screen"
-    },
-    {
-      "src": "https://placehold.co/1920x1080.png",
-      "sizes": "1920x1080",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "Desktop view of the app"
-    }
-  ],
-  "scope": "/",
-  "categories": [
-    "finance",
-    "productivity",
-    "utilities"
-  ],
-  "dir": "ltr",
-  "lang": "en-US",
-  "prefer_related_applications": false,
-  "related_applications": [],
-  "scope_extensions": [
-    { "origin": "*.mkcreditwise.com" }
   ]
 }
