--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,59 +1,41 @@
 {
   "name": "CreditWise AI",
-  "short_name": "CreditWise",
+  "short_name": "CreditWiseAI",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
   "start_url": "/",
   "display": "standalone",
-  "display_override": [
-    "window-controls-overlay"
-  ],
-  "background_color": "#f5f7fa",
+  "background_color": "#ffffff",
   "theme_color": "#4361ee",
-  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icons/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "icons/icon-maskable-192x192.png",
+      "src": "/icons/maskable_icon_x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "icons/icon-maskable-512x512.png",
+      "src": "/icons/maskable_icon_x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
   ],
-  "categories": [
-    "finance",
-    "utilities",
-    "business"
+  "display_override": [
+    "standalone",
+    "window-controls-overlay"
   ],
-  "dir": "ltr",
-  "lang": "en-US",
-  "scope": "/",
-  "prefer_related_applications": false,
-  "related_applications": [],
-  "scope_extensions": [
-    {
-      "origin": "*.mkcreditwise.com"
-    }
-  ],
-  "edge_side_panel": {
-    "preferred_width": 480
-  },
   "file_handlers": [
     {
       "action": "/verify",
@@ -61,15 +43,7 @@
         "application/pdf": [
           ".pdf"
         ]
-      },
-      "icons": [
-        {
-          "src": "icons/icon-192x192.png",
-          "sizes": "192x192",
-          "type": "image/png"
-        }
-      ],
-      "launch_type": "single-client"
+      }
     }
   ],
   "handle_links": "auto",
@@ -82,32 +56,6 @@
       "url": "/credit?type=%s"
     }
   ],
-  "shortcuts": [
-    {
-      "name": "Credit Analysis",
-      "short_name": "Credit",
-      "description": "Analyze a CIBIL credit report",
-      "url": "/credit",
-      "icons": [
-        {
-          "src": "icons/icon-192x192.png",
-          "sizes": "192x192"
-        }
-      ]
-    },
-    {
-      "name": "Verify PDF",
-      "short_name": "Verify",
-      "description": "Run a forensic analysis on a PDF",
-      "url": "/verify",
-      "icons": [
-        {
-          "src": "icons/icon-192x192.png",
-          "sizes": "192x192"
-        }
-      ]
-    }
-  ],
   "share_target": {
     "action": "/share-target",
     "method": "GET",
@@ -117,31 +65,73 @@
       "url": "url"
     }
   },
+  "shortcuts": [
+    {
+      "name": "Credit Analysis",
+      "short_name": "Credit",
+      "description": "Analyze a CIBIL credit report",
+      "url": "/credit",
+      "icons": [
+        {
+          "src": "/icons/icon-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
+    },
+    {
+      "name": "Verify PDF",
+      "short_name": "Verify",
+      "description": "Run forensic analysis on a PDF",
+      "url": "/verify",
+      "icons": [
+        {
+          "src": "/icons/icon-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
+    }
+  ],
   "widgets": [
     {
-      "name": "CreditWise AI Shortcuts",
-      "description": "Quick links to CreditWise AI features",
-      "tag": "shortcuts",
-      "template": "shortcuts",
-      "ms_ac_template": "shortcuts",
+      "name": "CreditWise AI Quick Actions",
+      "short_name": "CreditWise",
+      "description": "Quick actions for CreditWise AI",
+      "tag": "actions",
+      "template": "actions",
+      "ms_ac_template": "actions",
       "data": {
         "items": [
           {
-            "name": "Analyze CIBIL Report",
+            "title": "Analyze New Report",
+            "action": "analyze",
             "url": "/credit"
           },
           {
-            "name": "Forensically Verify PDF",
+            "title": "Verify Document",
+            "action": "verify",
             "url": "/verify"
           }
         ]
       },
       "icons": [
         {
-          "src": "icons/icon-192x192.png",
+          "src": "/icons/icon-192x192.png",
           "sizes": "192x192"
         }
       ]
     }
-  ]
+  ],
+  "edge_side_panel": {
+    "preferred_width": 480
+  },
+  "related_applications": [],
+  "scope_extensions": [
+    {
+      "origin": "*.creditwise.com"
+    }
+  ],
+  "iarc_rating_id": "12345",
+  "background_sync": {},
+  "periodic_background_sync": {},
+  "push_notifications": {}
 }
