--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "CreditWise AI",
-  "short_name": "CreditWiseAI",
+  "short_name": "CreditWise",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "orientation": "portrait",
+  "background_color": "#f5f7fa",
   "theme_color": "#4361ee",
   "icons": [
     {
@@ -20,13 +21,13 @@
       "purpose": "any"
     },
     {
-      "src": "/icons/maskable_icon_x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icons/maskable_icon_x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
@@ -35,26 +36,6 @@
   "display_override": [
     "standalone",
     "window-controls-overlay"
-  ],
-  "file_handlers": [
-    {
-      "action": "/verify",
-      "accept": {
-        "application/pdf": [
-          ".pdf"
-        ]
-      }
-    }
-  ],
-  "handle_links": "auto",
-  "launch_handler": {
-    "client_mode": "navigate-existing"
-  },
-  "protocol_handlers": [
-    {
-      "protocol": "web+creditwise",
-      "url": "/credit?type=%s"
-    }
   ],
   "share_target": {
     "action": "/share-target",
@@ -81,7 +62,7 @@
     {
       "name": "Verify PDF",
       "short_name": "Verify",
-      "description": "Run forensic analysis on a PDF",
+      "description": "Run a forensic analysis on a PDF",
       "url": "/verify",
       "icons": [
         {
@@ -93,45 +74,61 @@
   ],
   "widgets": [
     {
-      "name": "CreditWise AI Quick Actions",
-      "short_name": "CreditWise",
-      "description": "Quick actions for CreditWise AI",
-      "tag": "actions",
-      "template": "actions",
-      "ms_ac_template": "actions",
-      "data": {
-        "items": [
-          {
-            "title": "Analyze New Report",
-            "action": "analyze",
-            "url": "/credit"
-          },
-          {
-            "title": "Verify Document",
-            "action": "verify",
-            "url": "/verify"
-          }
-        ]
-      },
+      "name": "CreditWise AI Summary",
+      "description": "Quick access to your credit tools",
+      "tag": "creditwise-summary",
+      "template": "summary_template",
+      "ms_ac_template": "summary_template",
+      "data": "{}",
+      "screenshots": [
+        {
+          "src": "/icons/icon-512x512.png",
+          "sizes": "512x512",
+          "label": "Summary Widget Screenshot"
+        }
+      ],
       "icons": [
         {
           "src": "/icons/icon-192x192.png",
           "sizes": "192x192"
         }
-      ]
+      ],
+      "auth": false,
+      "update": 86400
     }
   ],
   "edge_side_panel": {
     "preferred_width": 480
   },
+  "file_handlers": [
+    {
+      "action": "/verify",
+      "accept": {
+        "application/pdf": [
+          ".pdf"
+        ]
+      }
+    }
+  ],
+  "handle_links": "auto",
+  "protocol_handlers": [
+    {
+      "protocol": "web+creditwise",
+      "url": "/credit?launch_url=%s"
+    }
+  ],
   "related_applications": [],
   "scope_extensions": [
     {
-      "origin": "*.creditwise.com"
+      "origin": "*.mkcreditwise.com"
     }
   ],
-  "iarc_rating_id": "12345",
   "background_sync": {},
   "periodic_background_sync": {},
-  "push_notifications": {}
+  "push_notifications": {
+      "show_trigger": {
+        "type": "timestamp",
+        "timestamp": 0
+      }
+  }
 }
