--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,22 @@
 {
-  "name": "CreditWise AI",
-  "short_name": "CreditWise",
-  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
-  "start_url": "/",
-  "display": "standalone",
-  "orientation": "portrait",
-  "background_color": "#f5f7fa",
   "theme_color": "#4361ee",
+  "background_color": "#f5f7fa",
+  "display": "standalone",
+  "scope": "/",
+  "start_url": "/",
+  "name": "CreditWise AI",
+  "short_name": "CreditWiseAI",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
+  "id": "/?source=pwa",
+  "lang": "en-US",
+  "dir": "auto",
+  "categories": [
+    "business",
+    "finance",
+    "utilities"
+  ],
+  "prefer_related_applications": false,
+  "iarc_rating_id": "12345",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
@@ -21,35 +31,45 @@
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/icon-maskable-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/icon-maskable-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
   ],
-  "display_override": [
-    "standalone",
-    "window-controls-overlay"
-  ],
-  "share_target": {
-    "action": "/share-target",
-    "method": "GET",
-    "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
+  "screenshots": [
+    {
+      "src": "/screenshots/screenshot-desktop-1.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Credit Analysis Dashboard"
+    },
+    {
+      "src": "/screenshots/screenshot-desktop-2.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "AI Underwriting"
+    },
+    {
+      "src": "/screenshots/screenshot-mobile-1.png",
+      "sizes": "720x1280",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Mobile Credit Score View"
     }
-  },
+  ],
   "shortcuts": [
     {
       "name": "Credit Analysis",
-      "short_name": "Credit",
+      "short_name": "Analyze",
       "description": "Analyze a CIBIL credit report",
       "url": "/credit",
       "icons": [
@@ -60,9 +80,9 @@
       ]
     },
     {
-      "name": "Verify PDF",
+      "name": "Verify Document",
       "short_name": "Verify",
-      "description": "Run a forensic analysis on a PDF",
+      "description": "Run forensic analysis on a PDF",
       "url": "/verify",
       "icons": [
         {
@@ -72,63 +92,11 @@
       ]
     }
   ],
-  "widgets": [
-    {
-      "name": "CreditWise AI Summary",
-      "description": "Quick access to your credit tools",
-      "tag": "creditwise-summary",
-      "template": "summary_template",
-      "ms_ac_template": "summary_template",
-      "data": "{}",
-      "screenshots": [
-        {
-          "src": "/icons/icon-512x512.png",
-          "sizes": "512x512",
-          "label": "Summary Widget Screenshot"
-        }
-      ],
-      "icons": [
-        {
-          "src": "/icons/icon-192x192.png",
-          "sizes": "192x192"
-        }
-      ],
-      "auth": false,
-      "update": 86400
-    }
+  "display_override": [
+    "window-controls-overlay",
+    "standalone"
   ],
-  "edge_side_panel": {
-    "preferred_width": 480
-  },
-  "file_handlers": [
-    {
-      "action": "/verify",
-      "accept": {
-        "application/pdf": [
-          ".pdf"
-        ]
-      }
-    }
-  ],
-  "handle_links": "auto",
-  "protocol_handlers": [
-    {
-      "protocol": "web+creditwise",
-      "url": "/credit?launch_url=%s"
-    }
-  ],
-  "related_applications": [],
-  "scope_extensions": [
-    {
-      "origin": "*.mkcreditwise.com"
-    }
-  ],
-  "background_sync": {},
-  "periodic_background_sync": {},
-  "push_notifications": {
-      "show_trigger": {
-        "type": "timestamp",
-        "timestamp": 0
-      }
+  "launch_handler": {
+    "client_mode": "navigate-existing"
   }
 }
