--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,8 @@
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
   "start_url": "/",
   "display": "standalone",
-  "display_override": [
-    "window-controls-overlay"
-  ],
-  "background_color": "#f5f7fa",
+  "background_color": "#ffffff",
   "theme_color": "#4361ee",
-  "scope": "/",
   "icons": [
     {
       "src": "/icon-192x192.png",
@@ -22,103 +18,6 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
-    },
-    {
-      "src": "/maskable_icon.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
-  ],
-  "id": "/?source=pwa",
-  "launch_handler": {
-    "client_mode": [
-      "navigate-existing",
-      "auto"
-    ]
-  },
-  "screenshots": [
-    {
-      "src": "/screenshots/screenshot1.png",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "label": "Credit Analysis Dashboard"
-    },
-    {
-      "src": "/screenshots/screenshot2.png",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "label": "AI Chat Agent"
-    }
-  ],
-  "categories": [
-    "business",
-    "finance"
-  ],
-  "dir": "auto",
-  "lang": "en-US",
-  "orientation": "portrait",
-  "prefer_related_applications": false,
-  "iarc_rating_id": "12345",
-  "edge_side_panel": {},
-  "file_handlers": [
-    {
-      "action": "/share-target",
-      "accept": {
-        "application/pdf": [
-          ".pdf"
-        ],
-        "image/*": [
-          ".png",
-          ".jpg",
-          ".jpeg",
-          ".gif"
-        ]
-      }
-    }
-  ],
-  "handle_links": "auto",
-  "protocol_handlers": [
-    {
-      "protocol": "web+creditwise",
-      "url": "/protocol?type=%s"
-    }
-  ],
-  "share_target": {
-    "action": "/share-target",
-    "method": "GET",
-    "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
-    }
-  },
-  "widgets": [
-    {
-      "name": "CreditWise AI Quick Score",
-      "description": "Check your latest AI credit score.",
-      "tag": "credit-score",
-      "template": "credit-score-widget",
-      "ms_ac_template": "credit-score-widget",
-      "data": {
-        "url": "/credit"
-      },
-      "screenshots": [
-        {
-          "src": "/screenshots/widget-screenshot.png",
-          "sizes": "280x140",
-          "type": "image/png",
-          "label": "Quick Score Widget"
-        }
-      ],
-      "icons": [
-        {
-          "src": "/icons/icon-96x96.png",
-          "sizes": "96x96"
-        }
-      ],
-      "auth": false,
-      "update": 86400
     }
   ]
 }
