--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,3 +1,4 @@
+
 {
   "theme_color": "#4361ee",
   "background_color": "#f5f7fa",
@@ -5,18 +6,8 @@
   "scope": "/",
   "start_url": "/",
   "name": "CreditWise AI",
-  "short_name": "CreditWise",
+  "short_name": "CreditWiseAI",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
-  "id": "com.creditwise.ai",
-  "dir": "auto",
-  "lang": "en-US",
-  "orientation": "portrait",
-  "prefer_related_applications": false,
-  "iarc_rating_id": "12345",
-  "display_override": [
-    "standalone",
-    "minimal-ui"
-  ],
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
@@ -25,65 +16,79 @@
       "purpose": "any"
     },
     {
+      "src": "/icons/maskable_icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
-    },
-    {
-      "src": "/icons/maskable_icon.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ],
   "shortcuts": [
     {
-      "name": "Analyze Credit Report",
-      "short_name": "Analyze",
-      "description": "Upload and analyze a new credit report",
-      "url": "/credit?action=analyze",
-      "icons": [{ "src": "/icons/shortcut-analyze.png", "sizes": "192x192" }]
+      "name": "Credit Analysis",
+      "short_name": "Credit",
+      "description": "Analyze a new CIBIL report",
+      "url": "/credit",
+      "icons": [
+        {
+          "src": "/icons/icon-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
     },
     {
-      "name": "Verify Document",
+      "name": "Verify PDF",
       "short_name": "Verify",
-      "description": "Run forensic analysis on a PDF document",
+      "description": "Run forensic analysis on a PDF",
       "url": "/verify",
-      "icons": [{ "src": "/icons/shortcut-verify.png", "sizes": "192x192" }]
+      "icons": [
+        {
+          "src": "/icons/icon-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
     }
   ],
   "share_target": {
-    "action": "/share-target/",
+    "action": "/share-target",
     "method": "POST",
     "enctype": "multipart/form-data",
     "params": {
       "files": [
         {
           "name": "files",
-          "accept": ["application/pdf", "image/*"]
+          "accept": [
+            "application/pdf",
+            "image/jpeg",
+            "image/png"
+          ]
         }
       ]
     }
   },
+  "id": "/?utm_source=pwa",
+  "launch_handler": {
+    "client_mode": [
+      "navigate-existing",
+      "auto"
+    ]
+  },
   "screenshots": [
     {
-      "src": "/screenshots/screenshot1.png",
+      "src": "/screenshots/screenshot-1.png",
       "type": "image/png",
-      "sizes": "1080x2340",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "/screenshots/screenshot2.png",
-      "type": "image/png",
-      "sizes": "1080x2340",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "/screenshots/screenshot-wide.png",
-      "type": "image/png",
-      "sizes": "1920x1080",
+      "sizes": "1280x720",
       "form_factor": "wide"
+    },
+    {
+      "src": "/screenshots/screenshot-2.png",
+      "type": "image/png",
+      "sizes": "720x1280"
     }
   ],
   "categories": [
@@ -91,35 +96,19 @@
     "finance",
     "utilities"
   ],
-  "edge_side_panel": {
-    "preferred_width": 480
+  "dir": "auto",
+  "lang": "en-US",
+  "prefer_related_applications": true,
+  "related_applications": [],
+  "iarc_rating_id": "12345",
+  "orientation": "portrait",
+  "background_sync": {
+    "disabled": false
   },
-  "file_handlers": [
-    {
-      "action": "/credit",
-      "accept": {
-        "application/pdf": [".pdf"]
-      }
-    }
-  ],
-  "handle_links": "auto",
-  "launch_handler": {
-    "client_mode": "navigate-existing"
+  "periodic_background_sync": {
+    "disabled": false
   },
-  "protocol_handlers": [
-    {
-      "protocol": "web+creditwise",
-      "url": "/credit?id=%s"
-    }
-  ],
-  "widgets": [
-    {
-      "name": "Quick Credit Analysis",
-      "description": "Analyze your latest credit report.",
-      "tag": "analyzer",
-      "template": "analyzer_template",
-      "ms_ac_template": "widgets/analyzer_template.json",
-      "data": "widgets/analyzer_data.json"
-    }
-  ]
+  "push_notifications": {
+    "disabled": false
+  }
 }
