--- a/workspace/apphosting.yaml
+++ b/workspace/apphosting.yaml
@@ -8,3 +8,6 @@ scaling:
   minInstances: 0
   maxInstances: 2
   concurrency: 80
+# env:
+#   - variable: GEMINI_API_KEY
+#     secret: GEMINI_API_KEY
