--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -2,6 +2,9 @@
 # https://firebase.google.com/docs/app-hosting/configure
 
 runConfig:
+  # By setting minInstances to 0, you allow the app to scale to zero
+  # when it's not receiving traffic, which can reduce costs.
+  minInstances: 0
   # Allow public, unauthenticated access to the backend.
   ingress: all
   # Increase this value if you'd like to automatically spin up
