--- a/package.json
+++ b/package.json
@@ -10,28 +10,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "firebase": "^10.12.2",
-    "lucide-react": "^0.395.0",
-    "next": "14.2.4",
-    "pdfjs-dist": "^4.4.178",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "next": "14.2.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19"
   }
 }
