--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -12,7 +13,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "next": "14.2.4"
+    "next": "14.2.4",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -21,6 +25,7 @@
     "@types/react-dom": "^18.3.0",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "autoprefixer": "^10.4.19",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
