--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "react-dom": "^18.3.1",
     "next": "14.2.4",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0"
+    "lucide-react": "^0.394.0",
+    "pdfjs-dist": "4.2.67",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -25,7 +31,6 @@
     "@types/react-dom": "^18.3.0",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19",
-    "tailwindcss-animate": "^1.0.7"
+    "autoprefixer": "^10.4.19"
   }
 }
