--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 9002 -H 0.0.0.0",
+    "dev": "next dev --port 9002 --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint",
