--- a/.env
+++ b/.env
@@ -1,15 +1,1 @@
-# This file is a template. Create a `.env.local` file and add your keys there.
-# DO NOT commit your keys to this file or any other file.
-
-# Firebase Public Config - Get these from your Firebase project settings
-NEXT_PUBLIC_FIREBASE_API_KEY="YOUR_API_KEY_HERE"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="YOUR_AUTH_DOMAIN_HERE"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="YOUR_PROJECT_ID_HERE"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="YOUR_STORAGE_BUCKET_HERE"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="YOUR_MESSAGING_SENDER_ID_HERE"
-NEXT_PUBLIC_FIREBASE_APP_ID="YOUR_APP_ID_HERE"
-
-# Gemini API Key (Optional for now)
-# This is NOT needed for the app to run or deploy.
-# You can get this from Google AI Studio.
-GEMINI_API_KEY=""
+NEXT_PUBLIC_FIREBASE_API_KEY=your-firebase-api-key-here
