--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-# Replace with your actual Firebase project configuration
-NEXT_PUBLIC_FIREBASE_API_KEY="your-api-key"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="your-auth-domain"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="your-project-id"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="your-storage-bucket"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="your-messaging-sender-id"
-NEXT_PUBLIC_FIREBASE_APP_ID="your-app-id"
+
+# This is a placeholder for your actual Firebase API key.
+# IMPORTANT: Replace "your-api-key-here" with the key from your Firebase project settings.
+# You can find it in the Firebase console: Project Settings > General > Your apps > Web app > SDK setup and configuration.
+NEXT_PUBLIC_FIREBASE_API_KEY="your-api-key-here"
