--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,22 @@
 {
   "name": "CreditWise AI",
   "short_name": "CreditWise",
-  "description": "AI-Powered Credit Analysis and Underwriting",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#3F51B5",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer by CreditWise AI",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
-  ]
+  ],
+  "theme_color": "#3F51B5",
+  "background_color": "#F0F2F5",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "portrait"
 }
