--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
+    "wav": "^1.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
