--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "^1.0.0",
+    "@genkit-ai/googleai": "*",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -35,7 +35,7 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.1.1",
-    "genkit": "^1.0.0",
+    "genkit": "*",
     "lucide-react": "^0.475.0",
     "next": "14.2.4",
     "pdfjs-dist": "^4.4.168",
@@ -51,9 +51,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "genkit-cli": "^1.0.0"
+    "genkit-cli": "*"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=20.0.0"
   }
 }
