--- a/workspace/apphosting.yaml
+++ b/workspace/apphosting.yaml
@@ -1,16 +1,20 @@
-version: 1
-run: npm run start
-build: npm run build
-resources:
-  cpu: 0.5
-  memoryMiB: 1024
-scaling:
+# Settings to manage and configure a Firebase App Hosting backend.
+# https://firebase.google.com/docs/app-hosting/configure
+
+runConfig:
+  # By setting minInstances to 0, you allow the app to scale to zero
+  # when it's not receiving traffic, which can reduce costs.
   minInstances: 0
-  maxInstances: 2
-  concurrency: 80
-env:
-  - variable: GEMINI_API_KEY
-    secret: GEMINI_API_KEY
+  # Allow public, unauthenticated access to the backend.
+  ingress: all
+  # Increase this value if you'd like to automatically spin up
+  # more instances in response to increased traffic.
+  maxInstances: 1
+
+logging: CLOUD_LOGGING_ONLY
+
+# Serve all traffic from the Next.js server.
+# https://firebase.google.com/docs/app-hosting/configure-nextjs
 headers:
   - source: /
     headers:
