--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.1",
